# glassy

./: .gitignore  .gitmodules  README.md
control_lib/: PidController.cpp  PidController.h
glassy_bringup/: CMakeLists.txt  README.md  package.xml
glassy_bringup/launch/: glassy_full_gate_race.launch.py  glassy_full_openloop.launch.py  glassy_full_pathfollowing.launch.py  glassy_full_sim.launch.py  glassy_full_sim_pid.launch.py  glassy_main_bringup.launch.py
glassy_control/control_lib/: LOSouterloop.cpp  LOSouterloop.h  LOSouterloopYawRate.cpp  LOSouterloopYawRate.h  OuterLoop.h  PathFollowingNode.cpp  PidController.cpp  PidController.h  README.md  VanniOuterLoop.cpp  VanniOuterLoop.h
glassy_control/glassy_inner_loops/: CMakeLists.txt  package.xml
glassy_control/glassy_inner_loops/config/: param.yaml  params.yaml
glassy_control/glassy_inner_loops/launch/: glassy_innerloop.launch.py
glassy_control/glassy_inner_loops/src/: glassy_innerloop_main.cpp
glassy_control/glassy_inner_loops/src/PID_ctrl_node/: MissionTypesInnerLoop.h  PIDControlNode.cpp  PIDControlNode.h
glassy_control/glassy_outer_loops/: CMakeLists.txt  package.xml
glassy_control/glassy_outer_loops/config/: glassy_outerloop_params.yaml  params.yaml
glassy_control/glassy_outer_loops/launch/: glassy_outerloop.launch.py
glassy_control/glassy_outer_loops/src/: glassy_outerloop_main.cpp
glassy_control/glassy_outer_loops/src/PathFollowingNode/: PathFollowingNode.cpp  PathFollowingNode.h
glassy_control/glassy_pathfollowing/config/: glassy_outerloop_params.yaml
glassy_control/glassy_pathfollowing/launch/: glassy_outerloop.launch.py
glassy_control/glassy_pathfollowing/src/: glassy_outerloop_main.cpp
glassy_control/glassy_pathfollowing/src/PathFollowingNode/: MissionTypesOuterLoop.h  PathFollowingNode.cpp  PathFollowingNode.h
glassy_drivers/glassy_interfaces/: CMakeLists.txt  package.xml
glassy_drivers/glassy_interfaces/msg/: Offboardattituderate.msg  Pathreferences.msg  State.msg
glassy_drivers/glassy_main/: CMakeLists.txt  README.md
glassy_drivers/glassy_main/config/: params.yaml
glassy_drivers/glassy_main/launch/: glassy_main.launch.py  glassy_main_real.launch.py
glassy_drivers/glassy_main/src/: main.cpp
glassy_drivers/glassy_main/src/mavsdk_node/: MavsdkNode.cpp  MavsdkNode.h
glassy_drivers/glassy_main/src/ros_node/: RosNode.cpp  RosNode.h
glassy_manual_control/glassy_joystick/: CMakeLists.txt  README.md
glassy_manual_control/glassy_joystick/config/: params.yaml
glassy_manual_control/glassy_joystick/launch/: glassy_joystick_full.launch.py
glassy_manual_control/glassy_joystick/src/: glassy_joystick_main.cpp
glassy_manual_control/glassy_joystick/src/joy_ctrl_node/: JoyControlNode.cpp  JoyControlNode.h
glassy_msgs/: CMakeLists.txt
glassy_msgs/msg/: GateWayPointInfo.msg  InnerLoopReferences.msg  MissionInfo.msg  PathInfo.msg  PathReferences.msg
glassy_openloop/: package.xml  setup.cfg  setup.py
glassy_openloop/config/: open_loop_params.yaml
glassy_openloop/glassy_openloop/: glassy_openloop.py
glassy_openloop/launch/: glassy_openloop.launch.py
glassy_pathgen/: package.xml  setup.cfg  setup.py
glassy_pathgen/config/: glassy_pathgen_params.yaml
glassy_pathgen/glassy_pathgen/: glassy_dubins.py  glassy_pathgen.py
glassy_pathgen/launch/: glassy_pathgen.launch.py  glassy_pathgen_dubins.launch.py
glassy_pathgen/target_examples/: circuit_1.py
glassy_planning/glassy_pathplanning/: CMakeLists.txt  package.xml
glassy_planning/glassy_pathplanning/PathExamples/: circle_10m_ccw.txt  circle_10m_cw.txt  circle_20m_ccw.txt  circle_20m_cw.txt  lawmower_10_5.txt  lawmower_50_15_12ms.txt  lawmower_50_15_1ms copy.txt  lawmower_50_15_2ms.txt  lawmower_50_5_1ms.txt  line_2.txt  mult_speed_line.txt  simple_line_1m-s.txt  simple_line_2m-s.txt  square_30_m_1_5m-s.txt  square_30_m_1m-s.txt  square_30_m_2m-s.txt  square_40_1m-s.txt  square_40_2m-s.txt
glassy_planning/glassy_pathplanning/config/: config.yaml  path_manager_config.yaml
glassy_planning/glassy_pathplanning/launch/: glassy_pathplanning.launch.py
glassy_planning/glassy_pathplanning/src/: glassy_pathplanning_main.cpp
glassy_px4_manager/: CMakeLists.txt
glassy_px4_manager/config/: params.yaml
glassy_px4_manager/launch/: glassy_px4_manager.launch.py
glassy_px4_manager/src/: StateManager.cpp  StateManager.h  mission_types.h
glassy_simulation/: CMakeLists.txt  README.md  package.xml
glassy_simulation/config/: params.yaml
glassy_simulation/launch/: boat_model.launch.py  expo_world.launch.py  glassy_gazebo.launch.py  glassy_model.launch.py  ocean_world.launch.py
glassy_simulation/src/: start_dds.bash  start_glassy.bash
glassy_utils/include/glassy_utils/: GlassyGeneralUtils.h
glassy_utils/src/: GlassyGeneralUtils.cpp
src/control_lib/: PidController.cpp
src/glassy_bringup/: CMakeLists.txt  package.xml
src/glassy_bringup/launch/: glassy_main_bringup.launch.py
src/glassy_controllers/simple_actuator_publisher/: CMakeLists.txt  package.xml
src/glassy_drivers/glassy_interfaces/: CMakeLists.txt  package.xml
src/glassy_drivers/glassy_main/: package.xml
src/glassy_drivers/main/: CMakeLists.txt  package.xml
src/glassy_drivers/main/config/: params.yaml
src/glassy_drivers/main/launch/: main.launch.py
src/glassy_drivers/main/src/: main.cpp
src/glassy_drivers/main/src/mavsdk_node/: MavsdkNode.cpp  MavsdkNode.h
src/glassy_drivers/main/src/ros_node/: RosNode.cpp  RosNode.h
src/glassy_drivers/main/srv/: arm.srv
src/glassy_drivers/vehicle_interfaces/: CMakeLists.txt  package.xml
src/glassy_manual_control/glassy_joy_control/: CMakeLists.txt
src/glassy_manual_control/glassy_joy_control/config/: params.yaml
src/glassy_manual_control/glassy_joy_control/src/: glassy_joystick_main.cpp
src/glassy_manual_control/glassy_joy_control/src/joy_ctrl_node/: JoyControlNode.cpp  JoyControlNode.h
src/glassy_manual_control/glassy_joystick/: package.xml
src/glassy_simulation/launch/: boat_model.launch.py  glassy_boat_model.launch.py  ocean_world.launch.py
(+38 files in other folders)
