<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glassy_bringup</name>
  <version>0.0.0</version>
  <description>Package containing all launch files of the glassy project</description>
  <maintainer email="joao.lehodey@gmail.com">joaolehodey</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>glassy_msgs</depend>
  <depend>glassy_px4_manager</depend>
  <depend>glassy_innerloop</depend>
  <depend>glassy_outerloop</depend>
  <depend>glassy_planning</depend>
  <!-- <depend>glassy_openloop</depend> -->




  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
